--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -7,7 +7,17 @@ on:
   pull_request:
 
 jobs:
-  lint:
+  black:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+      - uses: psf/black@20.8b1
+        with:
+          args: ". --check"
+
+  flake8:
+    needs: black
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
