--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -16,12 +16,11 @@ jobs:
         with:
           args: ". --check"
 
-  flake8:
-    needs: black
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-      - uses: psf/black@20.8b1
-        with:
-          args: ". --check"
+  # flake8:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - uses: actions/setup-python@v2
+  #     - uses: psf/black@20.8b1
+  #       with:
+  #         args: ". --check"
