--- a/setup.cfg
+++ b/setup.cfg
@@ -5,13 +5,13 @@ license_files = LICENSE.txt
 universal=0
 
 [mypy]
-exclude = tests/
+exclude = tests/, setup.py
 
 [mypy-matplotlib.*]
 ignore_missing_imports = True
 
 [flake8]
-ignore = E203, E266, E501, W503, F403, F401
+ignore = E203, E266, E501, W503, F403, F401, E741
 max-line-length = 160
 max-complexity = 18
 select = B,C,E,F,W,T4,B9
