flake8 in precommit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,5 +12,5 @@ repos:
     rev: v0.812
     hooks:
       - id: mypy
-        exclude: setup.py
+        exclude: setup.py, tests/
         args: [--disallow-untyped-calls, --disallow-untyped-defs, --check-untyped-defs, --ignore-missing-imports, --no-strict-optional]
