--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -12,15 +12,17 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
+        with:
+          python-version: "3.8"
       - uses: psf/black@20.8b1
         with:
           args: ". --check"
 
-  # flake8:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - uses: actions/setup-python@v2
-  #     - uses: psf/black@20.8b1
-  #       with:
-  #         args: ". --check"
+  flake8:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: "3.8"
+      - uses: py-actions/flake8@v1
