--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,18 @@ license_files = LICENSE.txt
 universal=0
 
 [mypy]
+python_version = 3.8
+disallow-untyped-calls = True
+disallow-untyped-defs = True
+check-untyped-defs = True
+ignore-missing-imports = True
+no-strict-optional = True
+
+[mypy-tests.*]
+ignore_errors = True
+
+[mypy-setup.py]
+ignore_errors = True
 
 [mypy-matplotlib.*]
 ignore_missing_imports = True
