--- a/setup.cfg
+++ b/setup.cfg
@@ -6,17 +6,12 @@ universal=0
 
 [mypy]
 python_version = 3.8
-disallow-untyped-calls = True
-disallow-untyped-defs = True
-check-untyped-defs = True
-ignore-missing-imports = True
-no-strict-optional = True
-
-[mypy-tests.*]
-ignore_errors = True
-
-[mypy-setup.py]
-ignore_errors = True
+disallow_untyped_calls = False
+disallow_untyped_defs = True
+check_untyped_defs = True
+ignore_missing_imports = True
+no_strict_optional = True
+exclude = tests/|setup.py
 
 [mypy-matplotlib.*]
 ignore_missing_imports = True
