--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,11 +4,13 @@ repos:
     hooks:
       - id: black
         language_version: python3
+
   - repo: https://gitlab.com/pycqa/flake8
     rev: 3.9.1
     hooks:
     - id: flake8
-  # - repo: https://github.com/pre-commit/mirrors-mypy
-  #   rev: v0.812
-  #   hooks:
-  #     - id: mypy
+    
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v0.812
+    hooks:
+      - id: mypy
