--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,3 +14,5 @@ repos:
     rev: v0.812
     hooks:
       - id: mypy
+        exclude: tests/|setup.py
+        args: [--disallow-untyped-calls, --disallow-untyped-defs, --check-untyped-defs, --ignore-missing-imports, --no-strict-optional]
