--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   black:
     runs-on: ubuntu-latest
+    # container: pytorch/pytorch:1.8.1-cuda11.1-cudnn8-runtime
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
@@ -16,6 +17,7 @@ jobs:
           python-version: "3.8"
       - name: Install Dependencies
         run: |
+          pip install -r requirements.txt
           pip install -e .
           # pip install 
       - name: pytest
