--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,7 +7,7 @@ on:
   pull_request:
 
 jobs:
-  black:
+  PyTest:
     runs-on: ubuntu-latest
     # container: pytorch/pytorch:1.8.1-cuda11.1-cudnn8-runtime
     steps:
