--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ torch>=1.8.1
 seaborn ~= 0.10
 matplotlib >= 3.4.1
 numpy >=1.20.2
+fastcore == 1.3.20  # Locked since package changes often without warning
 
 # Dev requirements
 pre-commit
