--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ seaborn ~= 0.10
 matplotlib >= 3.4.1
 numpy >=1.20.2
 fastcore == 1.3.20  # Locked since package changes often without warning
+fastprogress == 1.0.0  # Locked since package changes often without warning
 
 # Dev requirements
 pre-commit
