--- a/setup.cfg
+++ b/setup.cfg
@@ -17,7 +17,7 @@ exclude = tests/|setup.py
 ignore_missing_imports = True
 
 [flake8]
-ignore = E203, E266, E501, W503, F403, F401, E741
+ignore = E203, E266, E501, W503, F403, F401, E741, C901
 max-line-length = 160
 max-complexity = 18
 select = B,C,E,F,W,T4,B9
