--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ matplotlib >= 3.4.1
 numpy >=1.20.2
 fastcore == 1.3.20  # Locked since package changes often without warning
 fastprogress == 1.0.0  # Locked since package changes often without warning
+pandas >= 1.2.4
 
 # Dev requirements
 pre-commit
