--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,9 +10,19 @@ repos:
     hooks:
     - id: flake8
     
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.812
+  # - repo: https://github.com/pre-commit/mirrors-mypy
+  #   rev: v0.812
+  #   hooks:
+  #     - id: mypy
+  #       exclude: tests/|setup.py
+  #       args: [--disallow-untyped-calls, --disallow-untyped-defs, --check-untyped-defs, --ignore-missing-imports, --no-strict-optional]
+
+  - repo: local
     hooks:
       - id: mypy
-        exclude: tests/|setup.py
-        args: [--disallow-untyped-calls, --disallow-untyped-defs, --check-untyped-defs, --ignore-missing-imports, --no-strict-optional]
+        name: mypy
+        entry: "./run-mypy"
+        language: system
+        types: [python]
+        require_serial: true
+        verbose: true
