--- a/setup.cfg
+++ b/setup.cfg
@@ -9,11 +9,25 @@ python_version = 3.8
 disallow_untyped_calls = False
 disallow_untyped_defs = True
 check_untyped_defs = True
-ignore_missing_imports = True
 no_strict_optional = True
 exclude = tests/|setup.py
 
 [mypy-matplotlib.*]
+ignore_missing_imports = True
+
+[mypy-pandas.*]
+ignore_missing_imports = True
+
+[mypy-seaborn.*]
+ignore_missing_imports = True
+
+[mypy-fastcore.*]
+ignore_missing_imports = True
+
+[mypy-fastprogress.*]
+ignore_missing_imports = True
+
+[mypy-IPython.*]
 ignore_missing_imports = True
 
 [flake8]
