--- a/setup.cfg
+++ b/setup.cfg
@@ -10,6 +10,7 @@ disallow_untyped_calls = False
 disallow_untyped_defs = True
 check_untyped_defs = True
 exclude = tests/|setup.py
+no_strict_optional = True
 
 [mypy-matplotlib.*]
 ignore_missing_imports = True
