chore: Adjusted mypy to ignore /venv

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ python_version = 3.8
 disallow_untyped_calls = False
 disallow_untyped_defs = True
 check_untyped_defs = True
-exclude = tests/|setup.py
+exclude = tests/|setup.py|venv/
 no_strict_optional = True
 
 [mypy-matplotlib.*]
