multiplicative weights, add optimiser warmup, fix infs in trajectory fitting

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,9 @@ ignore_missing_imports = True
 [mypy-IPython.*]
 ignore_missing_imports = True
 
+[mypy-prettytable.*]
+ignore_missing_imports = True
+
 [flake8]
 ignore = E203, E266, E501, W503, F403, F401, E741, C901
 max-line-length = 160
