--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: "3.8"
-      - uses: psf/black@20.8b1
+      - uses: psf/black@22.1.0
         with:
           args: ". --check"
 
