--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ pandas >= 1.2.4
 ipykernel
 particle==0.20.0  # Hardcoded incase muon mass changes
 prettytable
+imageio
 
 # Dev requirements
 pre-commit
