--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,6 +9,7 @@ repos:
     rev: 3.9.1
     hooks:
     - id: flake8
+      args: [--ignore=E741 W503 E203 E501 C901]
     
   # - repo: https://github.com/pre-commit/mirrors-mypy
   #   rev: v0.812
