--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,9 @@ ignore_missing_imports = True
 [mypy-imageio.*]
 ignore_missing_imports = True
 
+[mypy-h5py.*]
+ignore_missing_imports = True
+
 [flake8]
 ignore = E203, E266, E501, W503, F403, F401, E741, C901
 max-line-length = 160
