Docs: Move init args to class docstring

--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,4 +1,5 @@
 sphinx
+-e git+https://github.com/GilesStrong/tomopt_sphinx_theme#egg=tomopt_sphinx_theme
 sphinx_rtd_theme
 sphinx_autodoc_typehints
 sphinx_autodoc_annotation
