--- a/setup.cfg
+++ b/setup.cfg
@@ -42,6 +42,9 @@ ignore_missing_imports = True
 [mypy-mpl_toolkits.*]
 ignore_missing_imports = True
 
+[mypy-functorch.*]
+ignore_missing_imports = True
+
 [flake8]
 ignore = E203, E266, E501, W503, F403, F401, E741, C901
 max-line-length = 160
