Chore: Add isort

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,9 @@ license_files = LICENSE
 [bdist_wheel]
 universal=0
 
+[isort]
+profile = "black"
+
 [mypy]
 python_version = 3.8
 disallow_untyped_calls = False
