--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,12 +11,11 @@ repos:
     - id: flake8
       args: [--ignore=E741 W503 E203 E501 C901]
     
-  # - repo: https://github.com/pre-commit/mirrors-mypy
-  #   rev: v0.812
-  #   hooks:
-  #     - id: mypy
-  #       exclude: tests/|setup.py
-  #       args: [--disallow-untyped-calls, --disallow-untyped-defs, --check-untyped-defs, --ignore-missing-imports, --no-strict-optional]
+  - repo: https://github.com/pycqa/isort
+    rev: 5.12.0
+    hooks:
+      - id: isort
+        args: ["--profile", "black", "--filter-files"]
 
   - repo: local
     hooks:
