--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # User requirements
 functorch
-torch>=1.10.0
+torch>=1.10.0,<2.0.0  # pt 2 hasn't been fully tested yet
 seaborn ~= 0.11.0
 matplotlib >= 3.1
 numpy >=1.20.2
