--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -13,8 +13,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: "3.8"
-      - uses: psf/black@24.1.1
+          python-version: "3.10"
+      - uses: psf/black@24.2.0
         with:
           args: ". --check"
 
@@ -24,7 +24,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: "3.8"
+          python-version: "3.10"
       - uses: py-actions/flake8@v1
 
   isort:
@@ -33,7 +33,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: "3.8"
+          python-version: "3.10"
       - uses: isort/isort-action@master
 
   mypy:
@@ -42,10 +42,10 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/setup-python@v4
       with:
-        python-version: "3.8"
+        python-version: "3.10"
     - name: Install Dependencies
       run: |
-        pip install -r requirements.txt
-        pip install -e .
+        curl -sSL https://install.python-poetry.org | python3 -
+        poetry install
     - name: mypy
       run: ./run-mypy
