--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ classifiers = [
         "Natural Language :: English",
         "Development Status :: 3 - Alpha",
 ]
-# documentation = "https://python-poetry.org/docs/"
+documentation = "https://tomopt.readthedocs.io/en/stable"
 keywords = ["deep learning", "differential programming", "physics", "science", "statistics", "tomography", "detector"]
 include = ["py.typed", "volume/scatter_models/*"]
 
