--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,7 +5,7 @@ repos:
       - id: poetry-check
       - id: poetry-lock
       - id: poetry-export
-        args: ["-f", "requirements.txt", "-o", "requirements.txt", "--with", "docs", "--with", "dev"]
+        args: ["-f", "requirements.txt", "-o", "requirements.txt", "--with", "docs", "--with", "dev", "--without-hashes"]
 
   - repo: https://github.com/psf/black
     rev: 24.2.0
